# Computational_Intelligence_22

./: README.md  pyproject.toml
Quarto/: MyPlayer.py  Player.py  README.md  Utils.py  main.py
lab1/: README.md  lab1_set-covering.ipynb  lab1_set-covering.py
lab2/: README.md  lab2.py  lab2_2ndVersion.py
lab3/: Nim.py  README.md  RL.py  lab3.py  lab3_nim.ipynb  minmax.py
